content/terraform-enterprise/1.0.x/docs/enterprise/api-docs/team-members.mdx
---
page_title: /relationships API reference for Terraform Enterprise
description: >-
  Use the Terraform Enterprise API's `/relationships` endpoints to add and
  remove users from teams using an account or organization membership ID.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-11T21:14:21-07:00
last_modified: 2025-08-11T21:14:21-07:00
# END AUTO GENERATED METADATA
---

[200]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/200

[201]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/201

[202]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/202

[204]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/204

[400]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400

[401]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/401

[403]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/403

[404]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/404

[409]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/409

[412]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/412

[422]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/422

[429]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/429

[500]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/500

[504]: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/504

[JSON API document]: /terraform/enterprise/api-docs#json-api-documents

[JSON API error object]: https://jsonapi.org/format/#error-objects

# Team membership API reference

<!-- BEGIN: TFC:only name:pnp-callout -->

-> **Note:** Team management is available in HCP Terraform **Standard**, **Plus**, and **Premium** editions. Free organizations can also use this API, but can only manage membership of their owners team. [Learn more about HCP Terraform pricing here](https://www.hashicorp.com/products/terraform/pricing).

<!-- END: TFC:only name:pnp-callout -->

The Team Membership API is used to add or remove users from teams. The [Team API](/terraform/enterprise/api-docs/teams) is used to create or destroy teams.

## Organization Membership

-> **Note:** To add users to a team, they must first receive and accept the invitation to join the organization by email. This process ensures that you do not accidentally add the wrong person by mistyping a username. Refer to [the Organization Memberships API documentation](/terraform/enterprise/api-docs/organization-memberships) for more information.

## Add a User to Team (With user ID)

This method adds multiple users to a team using the user ID. Both users and teams must already exist.

`POST /teams/:team_id/relationships/users`

| Parameter  | Description         |
| ---------- | ------------------- |
| `:team_id` | The ID of the team. |

### Request Body

This POST endpoint requires a JSON object with the following properties as a request payload.

Properties without a default value are required.

| Key path      | Type   | Default | Description                                      |
| ------------- | ------ | ------- | ------------------------------------------------ |
| `data[].type` | string |         | Must be `"users"`.                               |
| `data[].id`   | string |         | The ID of the user you want to add to this team. |

### Sample Payload

```json
{
  "data": [
    {
      "type": "users",
      "id": "myuser1"
    },
    {
      "type": "users",
      "id": "myuser2"
    }
  ]
}
```

### Sample Request

```shell
curl \
  --header "Authorization: Bearer $TOKEN" \
  --header "Content-Type: application/vnd.api+json" \
  --request POST \
  --data @payload.json \
  https://app.terraform.io/api/v2/teams/257525/relationships/users
```

## Add a User to Team (With organization membership ID)

This method adds multiple users to a team using the organization membership ID. Unlike the user ID method, the user only needs an invitation to the organization.

`POST /teams/:team_id/relationships/organization-memberships`

| Parameter  | Description         |
| ---------- | ------------------- |
| `:team_id` | The ID of the team. |

### Request Body

This POST endpoint requires a JSON object with the following properties as a request payload.

Properties without a default value are required.

| Key path      | Type   | Default | Description                                        |
| ------------- | ------ | ------- | -------------------------------------------------- |
| `data[].type` | string |         | Must be `"organization-memberships"`.              |
| `data[].id`   | string |         | The organization membership ID of the user to add. |

### Sample Payload

```json
{
  "data": [
    {
      "type": "organization-memberships",
      "id": "ou-nX7inDHhmC3quYgy"
    },
    {
      "type": "organization-memberships",
      "id": "ou-tTJph1AQVK5ZmdND"
    }
  ]
}
```

### Sample Request

```shell
curl \
  --header "Authorization: Bearer $TOKEN" \
  --header "Content-Type: application/vnd.api+json" \
  --request POST \
  --data @payload.json \
  https://app.terraform.io/api/v2/teams/257525/relationships/organization-memberships
```

## Delete a User from Team (With user ID)

This method removes multiple users from a team using the user ID. Both users and teams must already exist. This method only removes a user from this team. It does not delete that user overall.

`DELETE /teams/:team_id/relationships/users`

| Parameter  | Description         |
| ---------- | ------------------- |
| `:team_id` | The ID of the team. |

### Request Body

This DELETE endpoint requires a JSON object with the following properties as a request payload.

Properties without a default value are required.

| Key path      | Type   | Default | Description                                  |
| ------------- | ------ | ------- | -------------------------------------------- |
| `data[].type` | string |         | Must be `"users"`.                           |
| `data[].id`   | string |         | The ID of the user to remove from this team. |

### Sample Payload

```json
{
  "data": [
    {
      "type": "users",
      "id": "myuser1"
    },
    {
      "type": "users",
      "id": "myuser2"
    }
  ]
}
```

### Sample Request

```shell
$ curl \
  --header "Authorization: Bearer $TOKEN" \
  --header "Content-Type: application/vnd.api+json" \
  --request DELETE \
  --data @payload.json \
  https://app.terraform.io/api/v2/teams/257525/relationships/users
```

## Delete a User from Team (With organization membership ID)

This method removes multiple users from a team using the organization membership ID. This method only removes a user from this team. It does not delete that user overall.

`DELETE /teams/:team_id/relationships/organization-memberships`

| Parameter  | Description         |
| ---------- | ------------------- |
| `:team_id` | The ID of the team. |

### Request Body

This DELETE endpoint requires a JSON object with the following properties as a request payload.

Properties without a default value are required.

| Key path      | Type   | Default | Description                                           |
| ------------- | ------ | ------- | ----------------------------------------------------- |
| `data[].type` | string |         | Must be `"organization-memberships"`.                 |
| `data[].id`   | string |         | The organization membership ID of the user to remove. |

### Sample Payload

```json
{
  "data": [
    {
      "type": "organization-memberships",
      "id": "ou-nX7inDHhmC3quYgy"
    },
    {
      "type": "organization-memberships",
      "id": "ou-tTJph1AQVK5ZmdND"
    }
  ]
}
```

### Sample Request

```shell
$ curl \
  --header "Authorization: Bearer $TOKEN" \
  --header "Content-Type: application/vnd.api+json" \
  --request DELETE \
  --data @payload.json \
  https://app.terraform.io/api/v2/teams/257525/relationships/organization-memberships
```
